--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@ html {
 
 * {
     box-sizing: border-box;
+    margin: 0;
 }
 a {
     text-decoration: none;
@@ -114,7 +115,7 @@ footer .icon-wrapper {
 
 h2[role="type-title"] {
     position: absolute;
-    top: -50px;
+    top: -25px;
 
     display: flex;
     justify-content: center;
@@ -129,7 +130,7 @@ span[role="title-container"] {
 }
 
 .ingredients, ol li {
-    padding-block-end: 15px;
+    padding-block: 15px;
 }
 
 .hidden {
@@ -152,11 +153,40 @@ span[role="title-container"] {
 
     color: rgb(13, 13, 107);
     border-bottom: lightblue 2px solid;
-    padding-bottom: 25px;
+    padding-block: 40px;
+}
+
+.summary + h3 {
+    margin-block: 40px;
 }
 
 .backToTop {
     display: block;
     padding: 30px;
     align-self: center;
+}
+
+@media screen and (max-width: 700px) {
+
+    .main-menu {
+        flex-direction: column;
+        width: 85vw;
+        height: 70vh;
+    }
+
+    .categories {
+        writing-mode: horizontal-tb;
+        font-size: xx-large;
+        margin-block: 10px;
+        width: 95%;
+    }
+
+    .recipe {
+        padding: 20px;
+        width: 80vw;
+    }
+
+    h2[role="type-title"] {
+        width: 95%;
+    }
 }
